# python-redis-factory

./: .gitignore  =0.12.5  MANIFEST.in  Makefile  README.md  RELEASE.md  RELEASE_CHECKLIST.md  SETUP.md  main.py  pyproject.toml
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: README.md  RELEASE.md
examples/: requirements.txt
examples/cluster/: async_example.py  docker-compose.yml  run_examples.sh  sync_example.py
examples/sentinel/: async_example.py  docker-compose.yml  run_examples.sh  sync_example.py
examples/standalone/: async_example.py  docker-compose.yml  run_examples.sh  sync_example.py
scripts/: version.py
src/python_redis_factory/: __init__.py  config.py  factory.py  interfaces.py  py.typed  simple_api.py  uri_parser.py
src/python_redis_factory/clients/: __init__.py  cluster.py  sentinel.py  standalone.py
tests/: __init__.py
tests/integration/: __init__.py  test_async_integration.py  test_cluster_integration.py  test_e2e_integration.py  test_sentinel_integration.py  test_standalone_integration.py  test_sync_integration.py
tests/unit/: test_async_clients.py  test_async_simple_api.py  test_cluster_client.py  test_cluster_config.py  test_config.py  test_interfaces.py  test_sentinel_client.py  test_sentinel_config.py  test_simple_api.py  test_standalone_client.py  test_uri_parser.py
